adding tests for the new skew grid

--- a/test/test.css
+++ b/test/test.css
@@ -21,3 +21,7 @@
 	background-image: url(../graphics/background/square-grid-48x48.png);
 }
 
+#skew-grid {
+	background-image: url(../graphics/background/vertical-diamond-grid-42x72.png);
+}
+
