--- a/test/test.css
+++ b/test/test.css
@@ -4,29 +4,28 @@
 
 #test-content {
 	/* display: none; */
-	width: 600px;
+	width: 620px;
 	float: right;
 }
 
+/**
+ * grid test styles
+ */
 .grid-test {
 	width: 300px;
 	height: 300px;
 	background: #ccc;
 	float: right;
 }
-
 #hexagonal-grid {
 	background-image: url(../graphics/background/hex-grid-48x42.png);
 }
-
 #rectangular-grid {
 	background-image: url(../graphics/background/square-grid-48x48.png);
 }
-
 #skew-grid {
 	background-image: url(../graphics/background/vertical-diamond-grid-42x72.png);
 }
-
 #triangular-grid {
 	background-image: url(../graphics/background/vertical-triangle-grid-56x96.png);
 }
