adding sprite support - still need to implement recycling

--- a/test/test.css
+++ b/test/test.css
@@ -12,6 +12,13 @@
 }
 
 /**
+ * sprite test styles
+ */
+.sprite-test .sprite {
+	float: right;
+}
+
+/**
  * grid and region test styles
  */
 .grid-test {
